revise language for consistency and clarity

--- a/manuscripts/child-documents/results.Rmd
+++ b/manuscripts/child-documents/results.Rmd
@@ -42,9 +42,9 @@ Finally, note that although amplitude envelope correlation estimates were genera
 
 Figure \@ref(fig:phase-similarity-plots-delta)A shows the connectivity profiles for all phase coupling functional connectomes in the delta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-delta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the delta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-delta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-delta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the delta band was largely undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-delta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the delta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-delta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-delta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the delta band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method. 
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method (Table \@ref(tab:convergence-check-table)). 
 
 ```{r phase-similarity-plots-delta}
 #| fig.cap: "Results of phase coupling analyses in the delta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -63,7 +63,7 @@ targets::tar_read(phase_similarity_contrasts_table_nhst_delta)
 
 Figure \@ref(fig:phase-similarity-plots-theta)A shows the connectivity profiles for all phase coupling functional connectomes in the theta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-theta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the theta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-theta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-theta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the theta band was largely undifferentiated between individuals across contexts, with only a slight influence of individual-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-theta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the theta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-theta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-theta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the theta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
 These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-theta)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-theta)), but with slightly more uncertainty in the estimates.
 
@@ -107,7 +107,7 @@ targets::tar_read(phase_similarity_contrasts_table_nhst_alpha)
 
 Figure \@ref(fig:phase-similarity-plots-beta)A shows the connectivity profiles for all phase coupling functional connectomes in the beta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-beta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the beta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-beta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-beta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the beta band was largely undifferentiated between individuals across contexts, with only a slight influence of individual-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-beta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the beta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-beta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-beta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the beta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
 These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-beta)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-beta)), but with slightly more uncertainty in the estimates.
 
@@ -128,9 +128,9 @@ targets::tar_read(phase_similarity_contrasts_table_nhst_beta)
 
 Figure \@ref(fig:phase-similarity-plots-gamma)A shows the connectivity profiles for all phase coupling functional connectomes in the gamma band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was largely undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved; however, the difference in meaning between a precise zero effect [@anderson_AssessingStatisticalResults_2019] for the maximal models and a very small positive effect for the reduced models observed here is trivial, and does not detract from the main point that the results of both models suggest that the phase coupling dynamics of underlying global network activity in the gamma band was undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
 
 ```{r phase-similarity-plots-gamma}
 #| fig.cap: "Results of phase coupling analyses in the gamma band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -153,9 +153,9 @@ Figure \@ref(fig:amplitude-similarity-plots-alpha)A shows the connectivity profi
 
 Figure \@ref(fig:amplitude-similarity-plots-alpha)B shows the functional connectome similarity estimates between all pairs of amplitude coupling functional connectomes in the alpha band. Interestingly---although perhaps not surprisingly given the spatial correspondence between phase coupling and amplitude coupling functional connectomes (Figure \@ref(fig:illustrative-connectomes-figure))---similar patterns of individual differences in functional connectome similarity were observed here in relation to the phase coupling similarities observed in the alpha band (Figure \@ref(fig:phase-similarity-plots-alpha)B). However, there was also a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state.
 
-This was supported by the group-level contrast results in Figure \@ref(fig:amplitude-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:amplitude-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the amplitude coupling dynamics of underlying global network activity in the alpha band was largely undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
+This was supported by the group-level contrast results in Figure \@ref(fig:amplitude-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:amplitude-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the amplitude coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-The contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity, but with slightly more uncertainty in the estimates (Figure \@ref(fig:amplitude-similarity-plots-maximal-alpha)). This increased uncertainty resulted in the direction of the between sessions and states contrast to become unresolved; however, the difference in meaning between a precise zero effect [@anderson_AssessingStatisticalResults_2019] for the maximal model and a practically nil positive effect for the reduced model observed here is trivial, and does not detract from the main point that the results of both models suggest that the amplitude coupling dynamics of underlying global network activity in the alpha band was largely undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
+The contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity, but with slightly more uncertainty in the estimates (Figure \@ref(fig:amplitude-similarity-plots-maximal-alpha)). This increased uncertainty resulted in the direction of the between sessions and states contrast to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for this contrast, given the background model, also included the possibility of (essentially) zero difference.
 
 ```{r amplitude-similarity-plots-alpha}
 #| fig.cap: "Results of amplitude coupling analyses in the alpha band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -183,8 +183,6 @@ knitr::include_graphics(
   here::here(subset_similarity_contrast_barplot_figure)
 )
 ```
-
-Because of this outcome variability, we caution against confusing the positive and precise estimates of average effects for the group-level contrasts with the predictability of individual outcomes, which were more variable in both their direction and magnitude. However, equally, we also caution against confusing the individual-level contrasts whose direction was unresolved with precise zero effects or evidence of no difference in functional connectome similarity. For many of these contrasts, the effect sizes most compatible with our data, given the background model, included a range of effects that---although generally still at most small---were not negligible; thus, even though they leave open the possibility of zero or positive but negligible effects, they also leave open the possibility of small effects that may be worth investigating further.
 
 <!-- These results are informative in that they rule out moderate or large effects for individuals whose direction was unresolved. -->
 
